frontend/src/index.css
@import "tailwindcss";


@layer base {
    html, body {
        @apply bg-[#0F1117] text-[#F1F5F9] min-h-screen
    }
}


.inputDivStyle {
    @apply flex flex-col justify-center items-start gap-6 w-full;
}


.inputStyle {
    @apply bg-[#D9D9D9] w-full h-10 rounded-2xl text-black p-4 focus:outline-none;
}

.submitBtn {
    @apply bg-[#6C63FF] w-[50%] h-12 rounded-2xl hover:cursor-pointer;
}


.error {
    @apply text-red-500 text-sm
}

.notification {
    @apply w-[10%] h-12 fixed top-4 right-0 flex justify-center items-center font-bold rounded-2xl
}

.notification-success {
    @apply bg-green-500
}

.notification-error {
    @apply bg-red-500
}
   

.form {
    @apply flex flex-col justify-center items-center gap-10 text-2xl
}

.roomButton {
    @apply bg-[#02798E] w-32 px-6 h-12 text-2xl rounded-2xl hover:cursor-pointer hover:bg-[#0098a9]
}

